# tftp-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: ci.yml
include/: AckPacket.hpp  Address.hpp  DataPacket.hpp  ErrorPacket.hpp  Packet.hpp  PacketParser.hpp  ReadRequestPacket.hpp  Server.hpp  Socket.hpp  WriteRequestPacket.hpp
src/: AckPacket.cpp  Address.cpp  DataPacket.cpp  ErrorPacket.cpp  PacketParser.cpp  ReadRequestPacket.cpp  Server.cpp  Socket.cpp  WriteRequestPacket.cpp
tests/: test_packets.cpp  test_socket.cpp
